--- a/GameJamJune2022/Assets/_/Scripts/Runtime/Gameplay.Runtime.asmdef
+++ b/GameJamJune2022/Assets/_/Scripts/Runtime/Gameplay.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:af263eeee92b44c4283973702bd70bd7",
         "GUID:a25f64154a1a3d74d9803474714bd65d",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:4b127895d3ddcde4dabaf4b7717175e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
